Fix lesson 6.03 (contrast ratio audit).

--- a/lesson6-styling/03-contrast-audit/blog.css
+++ b/lesson6-styling/03-contrast-audit/blog.css
@@ -36,7 +36,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-color: #00659e;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -53,12 +53,14 @@ h6, .h6 {
 .blog-nav-item:focus {
   color: #fff;
   text-decoration: none;
+  outline: 1px dashed white;
 }
 
 /* Active state gets a caret at the bottom */
 .blog-nav .active {
   color: #fff;
 }
+
 .blog-nav .active:after {
   position: absolute;
   bottom: 0;
@@ -90,7 +92,7 @@ h6, .h6 {
 }
 .blog-description {
   font-size: 20px;
-  color: #999;
+  color: #595959;
 }
 
 
@@ -146,7 +148,7 @@ h6, .h6 {
 }
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  color: #767676;
 }
 
 
